[package]
name = "solana-validator-config-data-lib"
version = "0.1.0"
edition = "2021"
description = "A Rust library for retrieving Solana validator configuration data from chain"
license = "MIT"
repository = "https://github.com/matsuro-hadouken/solana-validator-config-data-lib"
keywords = ["solana", "validator", "blockchain", "crypto"]
categories = ["api-bindings", "web-programming::http-client"]
authors = ["Matsuro Hadouken matsuro-hadouken@protonmail.com"]

[lib]
name = "solana_validator_config"
path = "src/lib.rs"

[[bin]]
name = "validator-config-example"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0.17"
log = "0.4"

[dev-dependencies]
env_logger = "0.11.8"
tokio-test = "0.4"
