[package]
name = "solana-validator-config"
version = "0.2.0"
edition = "2021"
description = "A Rust library for retrieving Solana validator configuration data from the blockchain. Supports private RPC endpoints (QuickNode, Alchemy, Helius, etc.) and follows official Solana validator-info.json specification."
license = "MIT"
repository = "https://github.com/matsuro-hadouken/solana-validator-config-data-lib"
homepage = "https://github.com/matsuro-hadouken/solana-validator-config-data-lib"
documentation = "https://github.com/matsuro-hadouken/solana-validator-config-data-lib/blob/main/README.md"
keywords = ["solana", "validator", "blockchain", "crypto", "rpc"]
categories = ["api-bindings", "web-programming::http-client", "cryptography::cryptocurrencies"]
authors = ["Matsuro Hadouken <matsuro-hadouken@protonmail.com>"]
readme = "README.md"

[lib]
name = "solana_validator_config"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0.17"
log = "0.4"
bs58 = "0.5"
zstd = "0.13"

[dev-dependencies]
env_logger = "0.11.8"
tokio-test = "0.4"
